Quick fix on loader alignment for edge

--- a/client/src/styles/loaderSwitch.scss
+++ b/client/src/styles/loaderSwitch.scss
@@ -25,7 +25,7 @@
   &__ball {
     background-color: $color-secondary;
     border-radius: 100%;
-    margin: 6px;
+    margin: 0 6px;
     height: 22px;
     position: absolute;
     right: calc(100% - 33px);
